<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    tools:context=".soft1614080902416Activity"
    android:orientation="vertical">

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Hello World!"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->
    <EditText
        android:layout_width="380dp"
        android:layout_height="180dp"
        android:textSize="50dp"
        android:textColor="#7D26CD"

        android:background="@android:drawable/edit_text"
        android:inputType="text"
        android:id="@+id/result"

        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_ce"
            android:id="@+id/c_ce"
            android:textSize="30dp"
            />
        <Button

            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_c"
            android:id="@+id/c_c"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_xx"
            android:id="@+id/c_xx"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_div"
            android:id="@+id/c_div"
            android:textSize="30dp"
            android:background="#FF7F00"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_7"
            android:id="@+id/c_7"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_8"
            android:id="@+id/c_8"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_9"
            android:id="@+id/c_9"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_X"
            android:id="@+id/c_X"
            android:textSize="30dp"
            android:background="#FF7F"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_4"
            android:id="@+id/c_4"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_5"
            android:id="@+id/c_5"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_6"
            android:id="@+id/c_6"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_delete"
            android:id="@+id/c_delete"
            android:textSize="30dp"
            android:background="#7CCD7C"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_1"
            android:id="@+id/c_1"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_2"
            android:id="@+id/c_2"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_3"
            android:id="@+id/c_3"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_add"
            android:id="@+id/c_add"
            android:textSize="30dp"
            android:background="#1C86EE"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_aord"
            android:id="@+id/c_aord"
            android:textSize="30dp"
            />

        <Button
            android:id="@+id/c_0"
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_0"
            android:textSize="30dp"
            />
        <Button

            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_point"
            android:id="@+id/c_point"
            android:textSize="30dp"
            />
        <Button
            android:layout_width="95dp"
            android:layout_height="80dp"
            android:text="@string/c_equal"
            android:id="@+id/c_equal"
            android:textSize="30dp"
            android:background="#ffcc00"
            />
    </LinearLayout>

</LinearLayout>